typo on knowledge graph tutorial

--- a/tutorials/4.knowledge-graphs.ipynb
+++ b/tutorials/4.knowledge-graphs.ipynb
@@ -967,7 +967,7 @@
     "3) Key concepts and their relationships from a research paper.\n",
     "4) Entities and their relationships from a news article.\n",
     "\n",
-    "As an excercise, try to implement one of the above examples.\n",
+    "As an exercise, try to implement one of the above examples.\n",
     "\n",
     "All of them will follow an idea of iteratively extracting more and more information and accumulating it some state."
    ]
